# open_env_final

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  RUNBOOK.md  __init__.py  blog.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  train_social_engineer_arena_colab.ipynb
notebooks/: train_social_engineer_arena_grpo.ipynb
notebooks/.ipynb_checkpoints/: train_social_engineer_arena_grpo-checkpoint.ipynb
scripts/: build_large_scenarios.py  check_submission_readiness.py  evaluate_baselines.py  make_reward_plot.py  run_endpoint_rollout.py  run_suggest_action.py  train_grpo_placeholder.py  train_hf_job_sft.py  train_suggest_model.py  train_trl_grpo.py
server/: Dockerfile  __init__.py  app.py  requirements.txt
social_engineer_arena/: __init__.py  client.py  models.py  rubrics.py
social_engineer_arena.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
social_engineer_arena/data/: scenarios.json  scenarios.large.json
social_engineer_arena/server/: __init__.py  app.py  environment.py
tests/: test_api_contract.py  test_environment.py
